# gunshotmatch-reports

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  demo.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mypy.yml  octocheese.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst
doc-source/api/: alignment.rst  chromatogram.rst  peaks.rst  utils.rst
gunshotmatch_reports/: chromatogram.py  peaks.py  utils.py
